// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export Python pytest should export a suite 1`] = `
"# Generated by Selenium IDE
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

def valid credentials(driver):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(\\"tomsmith\\")
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(\\"SuperSecretPassword!\\")
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.CSS_SELECTOR, \\".flash.success\\").text == \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"
def invalid credentials(driver):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(\\"blah\\")
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(\\"blah\\")
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.ID, \\"flash\\").text == \\"Your username is invalid!\\\\\\\\\\\\\\\\n×\\"
"
`;

exports[`Code Export Python pytest should export a suite that uses control flow commands 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

def test_controlflowif():
    self = type('test',(), {})()
    self.driver = webdriver.Chrome()
    self.vars = {}
    self.vars[\\"myVar\\"] = self.driver.execute_script(\\"return 'a'\\")
    if self.driver.execute_script(\\"return (arguments[0] === 'a')\\", self.vars[\\"myVar\\"]):
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'a'\\")
    elif self.driver.execute_script(\\"return (arguments[0] === 'b')\\", self.vars[\\"myVar\\"]):
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'b'\\")
    else:
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'c'\\")
    assert(self.vars[\\"output\\"] == \\"a\\")
def test_controlflowelseif():
    self = type('test',(), {})()
    self.driver = webdriver.Chrome()
    self.vars = {}
    self.vars[\\"myVar\\"] = self.driver.execute_script(\\"return 'b'\\")
    if self.driver.execute_script(\\"return (arguments[0] === 'a')\\", self.vars[\\"myVar\\"]):
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'a'\\")
    elif self.driver.execute_script(\\"return (arguments[0] === 'b')\\", self.vars[\\"myVar\\"]):
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'b'\\")
    else:
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'c'\\")
    assert(self.vars[\\"output\\"] == \\"b\\")
def test_controlflowelse():
    self = type('test',(), {})()
    self.driver = webdriver.Chrome()
    self.vars = {}
    self.vars[\\"myVar\\"] = self.driver.execute_script(\\"return 'c'\\")
    if self.driver.execute_script(\\"return (arguments[0] === 'a')\\", self.vars[\\"myVar\\"]):
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'a'\\")
    elif self.driver.execute_script(\\"return (arguments[0] === 'b')\\", self.vars[\\"myVar\\"]):
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'b'\\")
    else:
      self.vars[\\"output\\"] = self.driver.execute_script(\\"return 'c'\\")
    assert(self.vars[\\"output\\"] == \\"c\\")
def test_controlflowdo():
    self = type('test',(), {})()
    self.driver = webdriver.Chrome()
    self.vars = {}
    self.vars[\\"check\\"] = self.driver.execute_script(\\"return 1\\")
    condition = True
    while condition:
      self.vars[\\"check\\"] = self.driver.execute_script(\\"return arguments[0] + 1\\", self.vars[\\"check\\"])
      condition = self.driver.execute_script(\\"return (arguments[0] < 3)\\", self.vars[\\"check\\"])
    assert(self.vars[\\"check\\"] == 3)
def test_controlflowtimes():
    self = type('test',(), {})()
    self.driver = webdriver.Chrome()
    self.vars = {}
    self.vars[\\"check\\"] = self.driver.execute_script(\\"return 1\\")
    for i in range(0, 2):
      self.vars[\\"check\\"] = self.driver.execute_script(\\"return arguments[0] + 1\\", self.vars[\\"check\\"])
    assert(self.vars[\\"check\\"] == 3)
def test_controlflowwhile():
    self = type('test',(), {})()
    self.driver = webdriver.Chrome()
    self.vars = {}
    self.vars[\\"check\\"] = self.driver.execute_script(\\"return 1\\")
    while self.driver.execute_script(\\"return (arguments[0] < 3)\\", self.vars[\\"check\\"]):
      self.vars[\\"check\\"] = self.driver.execute_script(\\"return arguments[0] + 1\\", self.vars[\\"check\\"])
    assert(self.vars[\\"check\\"] == 3)
"
`;

exports[`Code Export Python pytest should export a suite with a reused test method 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

def login(self):
  [object Object]
    self.getDriver().find_element(By.LINK_TEXT, \\"Form Authentication\\").click()
    self.getDriver().find_element(By.ID, \\"username\\").send_keys(self.vars[\\"username\\"])
    self.getDriver().find_element(By.ID, \\"password\\").send_keys(self.vars[\\"password\\"])
    self.getDriver().find_element(By.CSS_SELECTOR, \\".fa\\").click()

def invalid credentials(driver, undefined):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.vars[\\"username\\"] = \\"blah\\"
  self.vars[\\"password\\"] = \\"blah\\"
  self.login()
def valid credentials(driver, undefined):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.vars[\\"username\\"] = \\"tomsmith\\"
  self.vars[\\"password\\"] = \\"SuperSecretPassword!\\"
  self.login()
"
`;

exports[`Code Export Python pytest should export a suite with commands that open a new window inside of a reused test method 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

  def wait_for_window(self, timeout = 2):
    time.sleep(round(timeout / 1000))
    wh_now = self.getDriver().window_handles
    wh_then = self.vars[\\"window_handles\\"]
    if len(wh_now) > len(wh_then):
      return set(wh_now).difference(set(wh_then)).pop()

def selectwindow(self):
  [object Object]
    self.vars[\\"window_handles\\"] = self.getDriver().window_handles
    self.getDriver().find_element(By.LINK_TEXT, \\"Click Here\\").click()
  self.vars[\\"win9425\\"] = self.wait_for_window(2000)
    self.getDriver().switch_to.window(self.vars[\\"win9425\\"])
    assert self.getDriver().title == \\"\\"New Window\\"\\"

def reuse(driver, undefined):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.selectwindow()
"
`;

exports[`Code Export Python pytest should export a suite with just one new window util method when there are multiple commands that open a new window 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

  def wait_for_window(self, timeout = 2):
    time.sleep(round(timeout / 1000))
    wh_now = self.getDriver().window_handles
    wh_then = self.vars[\\"window_handles\\"]
    if len(wh_now) > len(wh_then):
      return set(wh_now).difference(set(wh_then)).pop()

def selectwindow(self):
  [object Object]
    self.vars[\\"window_handles\\"] = self.getDriver().window_handles
    self.getDriver().find_element(By.LINK_TEXT, \\"Click Here\\").click()
  self.vars[\\"win9425\\"] = self.wait_for_window(2000)
    self.getDriver().switch_to.window(self.vars[\\"win9425\\"])
    assert self.getDriver().title == \\"\\"New Window\\"\\"

def reuse(driver, undefined):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.selectwindow()
def select window(driver, undefined):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.getDriver().get(\\"http://the-internet.herokuapp.com/windows\\")
  self.vars[\\"window_handles\\"] = self.getDriver().window_handles
  self.getDriver().find_element(By.LINK_TEXT, \\"Click Here\\").click()
self.vars[\\"win9425\\"] = self.wait_for_window(2000)
  self.getDriver().switch_to.window(self.vars[\\"win9425\\"])
  assert self.getDriver().title == \\"\\"New Window\\"\\"
"
`;

exports[`Code Export Python pytest should export a test 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

def login(driver,  parm1, parm2):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(parm1)
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(parm2)
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.CSS_SELECTOR, \\".flash.success\\").text == \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"
  return self"
`;

exports[`Code Export Python pytest should export a test with a reused test method 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

def login(self):
  [object Object]
    self.getDriver().find_element(By.LINK_TEXT, \\"Form Authentication\\").click()
    self.getDriver().find_element(By.ID, \\"username\\").send_keys(self.vars[\\"username\\"])
    self.getDriver().find_element(By.ID, \\"password\\").send_keys(self.vars[\\"password\\"])
    self.getDriver().find_element(By.CSS_SELECTOR, \\".fa\\").click()

def valid credentials(driver, ):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.vars[\\"username\\"] = \\"tomsmith\\"
  self.vars[\\"password\\"] = \\"SuperSecretPassword!\\"
  self.login()
  return self"
`;

exports[`Code Export Python pytest should export a test with commands that open a new window 1`] = `
"# Generated by Selenium IDE
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

  def wait_for_window(self, timeout = 2):
    time.sleep(round(timeout / 1000))
    wh_now = self.getDriver().window_handles
    wh_then = self.vars[\\"window_handles\\"]
    if len(wh_now) > len(wh_then):
      return set(wh_now).difference(set(wh_then)).pop()

def select window(driver):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.getDriver().get(\\"http://the-internet.herokuapp.com/\\")
  self.getDriver().set_window_size(1260, 1027)
  self.getDriver().find_element(By.LINK_TEXT, \\"Multiple Windows\\").click()
  self.vars[\\"window_handles\\"] = self.getDriver().window_handles
  self.getDriver().find_element(By.LINK_TEXT, \\"Click Here\\").click()
self.vars[\\"win9625\\"] = self.wait_for_window(2000)
  self.vars[\\"root\\"] =  self.getDriver().current_window_handle
  self.getDriver().switch_to.window(self.vars[\\"win9625\\"])
  assert self.getDriver().title == \\"\\"New Window\\"\\"
  self.getDriver().switch_to.window(self.vars[\\"root\\"])
  assert self.getDriver().title == \\"\\"The Internet\\"\\"
  return self"
`;

exports[`Code Export Python pytest should export a test with grid execution 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities

self = type('', (), {})()
driver = None
delay = 0.3
waitTime = 3000
self.vars = {}

def login(driver,  parm1, parm2):
  def getDriver():
    time.sleep(self.delay)
    if self.driver is None:
      if driver is None:
        self.driver = webdriver.Chrome()
      else:
        self.driver = driver
      self.driver.implicitly_wait(self.waitTime)
    return self.driver
        
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(parm1)
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(parm2)
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.CSS_SELECTOR, \\".flash.success\\").text == \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"
  return self"
`;
